# cursor-playground

./: .gitignore  README.md  pyproject.toml
data/: sales.json  users.csv
examples/: process_sample_data.py
src/cursor_demo_project/: __init__.py  cli.py  data_loader.py
src/new_project/: __init__.py  cli.py  data_loader.py
