[project]
name = "new-project"
version = "0.1.0"
description = "A Python CLI application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
new-project = "new_project.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_project"]
