[project]
name = "cursor-demo-project"
version = "0.1.0"
description = "A small Python CLI for learning and practicing Cursor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cursor-demo = "cursor_demo_project.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_demo_project"]
